# get-my-history

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: dotslash-config.json  dotslash.yml
src/: main.rs
