[package]
name = "get-my-history"
version = "0.1.10"
edition = "2021"
repository = "https://github.com/miikka/get-my-history"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
